--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,6 @@ crate/wasm-pack.log
 crate/src/generated/**
 !crate/src/generated/mod.rs
 
-crate/guides/generated_html/**
+crate/generated_guides/**
 
 !**/.gitkeep
