--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:release": "yarn generate:css_classes && webpack --config configs/webpack.config --mode=production && yarn optimize_wasm",
     "build:prerender": "yarn build:release && yarn prerender",
     "serve:dist": "yarn serve -s -l 8000 dist",
+    "serve:prerender": "yarn serve -l 8000 dist",
     "prerender": "yarn concurrently -k -s first \"yarn serve:dist\" \"wait-on http://localhost:8000/ && react-snap\"",
     "optimize_wasm": "node scripts/optimize_wasm.js",
     "generate:css_classes": "webpack --config configs/webpack.css_classes.config --mode=development"
@@ -26,7 +27,6 @@
     "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^4.1.2",
     "copy-webpack-plugin": "^5.0.4",
-    "critters-webpack-plugin": "^2.4.0",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
     "find": "^0.3.0",
