--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -23,6 +23,7 @@ wasm-bindgen-test = "^0.2.50" # sync with `wasm-bindgen`
 [dependencies]
 wasm-bindgen = "^0.2.50" # sync with `wasm-bindgen-test`
 seed = { git = "https://github.com/David-OConnor/seed", branch="master" }
+#seed = { path = "../../seed" }
 
 [dependencies.web-sys]
 version = "^0.3.28"
