--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -22,7 +22,8 @@ wasm-bindgen-test = "^0.2.50" # sync with `wasm-bindgen`
 
 [dependencies]
 wasm-bindgen = "^0.2.50" # sync with `wasm-bindgen-test`
-seed = { git = "https://github.com/David-OConnor/seed", branch="master" }
+seed = "0.4.2"
+#seed = { git = "https://github.com/David-OConnor/seed", branch="master" }
 #seed = { path = "../../seed" }
 
 [dependencies.web-sys]
