--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 version = "0.1.0"
-name = "kavik_cz"
-repository = "https://github.com/MartinKavik/kavik.cz"
-authors = ["Martin Kavík <martin@kavik.cz>"]
-description = "Personal website kavik.cz"
-categories = ["wasm", "rust", "tailwindcss", "seed", "personal", "website"]
+name = "seed_rs_org"
+repository = "https://github.com/MartinKavik/seed-rs.org"
+authors = ["Martin Kavík <martin@kavik.cz>", "David O'Connor <david.alan.oconnor@gmail.com>"]
+description = "Rust framework for creating fast and reliable web apps"
+categories = ["wasm", "rust", "tailwindcss", "seed", "docs", "website"]
 license = "MIT"
 readme = "./README.md"
 edition = "2018"
