--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,3 +14,27 @@ jobs:
       - uses: actions/checkout@v1
       - name: Run tests
         run: cargo make verify_only
+        working-directory: ./crate
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [test]
+    if: github.ref == "refs/heads/master"
+    steps:       
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+      - uses: actions/checkout@v1
+      - name: Run build
+        run: |
+          yarn
+          yarn build:prerender
+         
+      - name: Run deploy
+        env:
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_ACCESS_TOKEN: ${{ secrets.NETLIFY_ACCESS_TOKEN }}
+        run: | 
+          yarn global add netlify-cli
+          netlify deploy -s $NETLIFY_SITE_ID --auth $NETLIFY_ACCESS_TOKEN -p --dir ./dist
