--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [test]
-    if: github.ref == "refs/heads/master"
+    if: github.ref == 'refs/heads/master'
     steps:       
       - uses: actions-rs/toolchain@v1
         with:
