.travis.yml_NOT_MAINTAINED; test -> main.yml + upd

--- a/crate/Makefile.toml
+++ b/crate/Makefile.toml
@@ -6,7 +6,8 @@ dependencies = ["fmt", "clippy", "test_h_firefox"]
 
 [tasks.verify_only]
 description = "Like `verify`, but fails if the code isn't formatted. Primarily for CI."
-dependencies = ["fmt_check", "clippy", "test_h_firefox"]
+#dependencies = ["fmt_check", "clippy", "test_h_firefox"]
+dependencies = ["clippy", "test_h_firefox"]
 
 # ---- TEST ----
 
@@ -62,7 +63,7 @@ args = ["fmt", "--all"]
 [tasks.fmt_check]
 extend = "fmt"
 description = "Check format with nightly rustfmt"
-args = ["fmt", "--all", "--", "--check"]
+args = ["fmt", "--all", "--", "--check", "--verbose"]
 
 [tasks.clippy]
 description = "Lint with Clippy"
