--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 version = "0.1.0"
 name = "seed_rs_org"
-repository = "https://github.com/MartinKavik/seed-rs.org"
+repository = "https://github.com/seed-rs/seed-rs.org"
 authors = ["Martin Kavík <martin@kavik.cz>", "David O'Connor <david.alan.oconnor@gmail.com>"]
 description = "Rust framework for creating fast and reliable web apps"
 categories = ["wasm", "rust", "tailwindcss", "seed", "docs", "website"]
@@ -25,7 +25,7 @@ wasm-bindgen = "^0.2.50" # sync with `wasm-bindgen-test`
 serde = { version = "^1.0.102", features = ['derive'] }
 serde_json = "^1.0.41"
 #seed = "0.5.0"
-seed = { git = "https://github.com/David-OConnor/seed", branch="master" }
+seed = { git = "https://github.com/seed-rs/seed", branch="master" }
 #seed = { path = "../../seed" }
 
 [dependencies.web-sys]
