--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -24,8 +24,8 @@ wasm-bindgen-test = "^0.2.50" # sync with `wasm-bindgen`
 wasm-bindgen = "^0.2.50" # sync with `wasm-bindgen-test`
 serde = { version = "^1.0.102", features = ['derive'] }
 serde_json = "^1.0.41"
-#seed = "0.5.0"
-seed = { git = "https://github.com/seed-rs/seed", branch="master" }
+seed = "0.5.0"
+#seed = { git = "https://github.com/seed-rs/seed", branch="master" }
 #seed = { path = "../../seed" }
 
 [dependencies.web-sys]
