--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -15,21 +15,19 @@ build = "build.rs"
 crate-type = ["cdylib"]
 
 [build-dependencies]
-pulldown-cmark = "^0.6.0"
+pulldown-cmark = "^0.6.1"
 
 [dev-dependencies]
-wasm-bindgen-test = "^0.2.50" # sync with `wasm-bindgen`
+wasm-bindgen-test = "^0.3.8"
 
 [dependencies]
-wasm-bindgen = "^0.2.50" # sync with `wasm-bindgen-test`
-serde = { version = "^1.0.102", features = ['derive'] }
-serde_json = "^1.0.41"
-seed = "0.5.0"
-#seed = { git = "https://github.com/seed-rs/seed", branch="master" }
-#seed = { path = "../../seed" }
+wasm-bindgen = "^0.2.58"
+serde = { version = "^1.0.104", features = ['derive'] }
+serde_json = "^1.0.45"
+seed = "0.5.1"
 
 [dependencies.web-sys]
-version = "^0.3.28"
+version = "^0.3.35"
 features = [
   "ScrollToOptions",
   "Navigator",
@@ -37,4 +35,5 @@ features = [
 
 [profile.release]
 lto = true
-opt-level = 's'
+opt-level = 'z'
+codegen-units = 1
