--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -24,7 +24,8 @@ wasm-bindgen-test = "^0.3.8"
 wasm-bindgen = "^0.2.58"
 serde = { version = "^1.0.104", features = ['derive'] }
 serde_json = "^1.0.45"
-seed = "0.5.1"
+#seed = "0.6.0"
+seed = { git = "https://github.com/seed-rs/seed.git" }
 
 [dependencies.web-sys]
 version = "^0.3.35"
