--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -15,20 +15,20 @@ build = "build.rs"
 crate-type = ["cdylib"]
 
 [build-dependencies]
-pulldown-cmark = "^0.6.1"
+pulldown-cmark = "0.7.1"
 
 [dev-dependencies]
-wasm-bindgen-test = "^0.3.8"
+wasm-bindgen-test = "0.3.12"
 
 [dependencies]
-wasm-bindgen = "^0.2.58"
-serde = { version = "^1.0.104", features = ['derive'] }
-serde_json = "^1.0.45"
+wasm-bindgen = "0.2.62"
+serde = { version = "1.0.106", features = ['derive'] }
+serde_json = "1.0.52"
 #seed = "0.6.0"
 seed = { git = "https://github.com/seed-rs/seed.git" }
 
 [dependencies.web-sys]
-version = "^0.3.35"
+version = "0.3.39"
 features = [
   "ScrollToOptions",
   "Navigator",
@@ -38,3 +38,6 @@ features = [
 lto = true
 opt-level = 'z'
 codegen-units = 1
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = ['-Os']
