--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "start": "yarn generate:css_classes && webpack-dev-server --config configs/webpack.config.js -d",
     "start:release": "yarn generate:css_classes && webpack-dev-server --config configs/webpack.config.js --mode=production",
     "build": "yarn generate:css_classes && webpack --config configs/webpack.config --mode=development",
-    "build:release": "yarn generate:css_classes && webpack --config configs/webpack.config --mode=production && yarn optimize_wasm",
+    "build:release": "yarn generate:css_classes && webpack --config configs/webpack.config --mode=production",
     "build:prerender": "yarn build:release && yarn prerender",
     "serve:dist": "yarn serve -s -l 8000 dist",
     "serve:prerender": "yarn serve -l 8000 dist",
     "prerender": "yarn concurrently -k -s first \"yarn serve:dist\" \"wait-on http://localhost:8000/ && react-snap\"",
-    "optimize_wasm": "node scripts/optimize_wasm.js",
     "generate:css_classes": "webpack --config configs/webpack.css_classes.config --mode=development"
   },
   "reactSnap": {
@@ -23,35 +22,34 @@
   },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "1.0.1",
-    "binaryen": "^90.0.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "concurrently": "^5.0.2",
-    "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
-    "file-loader": "^5.0.2",
-    "find": "^0.3.0",
-    "handlebars": "^4.7.2",
-    "handlebars-loader": "^1.7.1",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "no-emit-webpack-plugin": "^2.0.1",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-typed-css-classes": "^0.1.5",
-    "react-snap": "^1.23.0",
-    "serve": "^11.3.0",
-    "style-loader": "^1.1.3",
-    "tailwindcss": "^1.1.4",
-    "text-encoding": "^0.7.0",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.7.5",
-    "wait-on": "^4.0.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1",
-    "webpackbar": "^4.0.0"
+    "clean-webpack-plugin": "3.0.0",
+    "concurrently": "5.2.0",
+    "copy-webpack-plugin": "5.1.1",
+    "css-loader": "3.5.3",
+    "file-loader": "6.0.0",
+    "find": "0.3.0",
+    "handlebars": "4.7.6",
+    "handlebars-loader": "1.7.1",
+    "html-webpack-plugin": "4.3.0",
+    "mini-css-extract-plugin": "0.9.0",
+    "no-emit-webpack-plugin": "2.0.1",
+    "postcss-import": "12.0.1",
+    "postcss-loader": "3.0.0",
+    "postcss-typed-css-classes": "0.1.5",
+    "react-snap": "1.23.0",
+    "serve": "11.3.0",
+    "style-loader": "1.2.1",
+    "tailwindcss": "1.4.4",
+    "text-encoding": "0.7.0",
+    "ts-loader": "7.0.2",
+    "typescript": "3.8.3",
+    "wait-on": "4.0.2",
+    "webpack": "4.43.0",
+    "webpack-cli": "3.3.11",
+    "webpack-dev-server": "3.10.3",
+    "webpackbar": "4.0.0"
   },
   "dependencies": {
-    "lit-element": "^2.2.1"
+    "lit-element": "2.3.1"
   }
 }
