add cspell to yarn, and fix all obvious spelling errors. allowed words are in words.txt.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "serve:dist": "yarn serve -s -l 8000 dist",
     "serve:prerender": "yarn serve -l 8000 dist",
     "prerender": "yarn concurrently -k -s first \"yarn serve:dist\" \"wait-on http://localhost:8000/ && react-snap\"",
-    "generate:css_classes": "webpack --config configs/webpack.css_classes.config --mode=development"
+    "generate:css_classes": "webpack --config configs/webpack.css_classes.config --mode=development",
+    "spellcheck": "yarn cspell ./**/*.md"
   },
   "reactSnap": {
     "source": "dist",
@@ -50,6 +51,7 @@
     "webpackbar": "4.0.0"
   },
   "dependencies": {
+    "cspell": "^4.0.63",
     "lit-element": "2.3.1"
   }
 }
