fixing suggestions from PR.
I've put a deliberate error in the words.txt file so that the spellcheck step fails so I can check that that mechanism is working.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,9 @@ jobs:
         run: cargo make verify_only
         working-directory: ./crate
 
+      - name: Run spell check
+        run: yarn spellcheck
+
       - name: Install Netlify CLI
         if: github.ref == 'refs/heads/master'
         run: sudo npm install netlify-cli -g
