--- a/crate/Makefile.toml
+++ b/crate/Makefile.toml
@@ -2,11 +2,11 @@
 
 [tasks.verify]
 description = "Format, lint with Clippy and run tests"
-dependencies = ["fmt", "clippy", "test_h_firefox"]
+dependencies = ["fmt", "clippy", "spellcheck", "test_h_firefox"]
 
 [tasks.verify_only]
 description = "Like `verify`, but fails if the code isn't formatted. Primarily for CI."
-dependencies = ["fmt_check", "clippy", "test_h_firefox"]
+dependencies = ["fmt_check", "clippy", "spellcheck", "test_h_firefox"]
 
 # ---- TEST ----
 
@@ -70,3 +70,8 @@ clear = true
 install_crate = { rustup_component_name = "clippy", binary = "cargo-clippy", test_arg = "--help" }
 command = "cargo"
 args = ["clippy", "--all-features", "--", "--deny", "warnings", "--deny", "clippy::pedantic", "--deny", "clippy::nursery"]
+
+# ---- Spell check ----
+
+[tasks.spellcheck]
+script = ["yarn spellcheck"]
