--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -16,6 +16,7 @@ crate-type = ["cdylib"]
 
 [build-dependencies]
 pulldown-cmark = "0.7.1"
+uuid = "0.8.1"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.12"
