--- a/crate/rustfmt.toml
+++ b/crate/rustfmt.toml
@@ -13,7 +13,7 @@ normalize_doc_attributes = true
 reorder_impl_items = true
 normalize_comments = true
 match_block_trailing_comma = true
-merge_imports = true
+imports_granularity = "Crate"
 report_fixme = "Always"
 error_on_unformatted = true
 use_small_heuristics = "Off"
