--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -7,33 +7,34 @@ description = "Rust framework for creating fast and reliable web apps"
 categories = ["wasm", "rust", "tailwindcss", "seed", "docs", "website"]
 license = "MIT"
 readme = "./README.md"
-edition = "2018"
+edition = "2021"
 
 build = "build.rs"
 
 [lib]
 crate-type = ["cdylib"]
 
-[build-dependencies]
-pulldown-cmark = "0.7.1"
-uuid = "0.8.1"
-
-[dev-dependencies]
-wasm-bindgen-test = "0.3.12"
-
 [dependencies]
-wasm-bindgen = "0.2.62"
-serde = { version = "1.0.106", features = ['derive'] }
-serde_json = "1.0.52"
-#seed = "0.6.0"
-seed = { git = "https://github.com/seed-rs/seed.git" }
+gloo-storage = "0.2.2"
+seed = { version = "0.10.0", features = ["routing"] }
+serde = { version = "1.0.153", features = ['derive'] }
+serde_json = "1.0.94"
+wasm-bindgen = "0.2.84"
 
 [dependencies.web-sys]
-version = "0.3.39"
+version = "0.3.61"
 features = [
   "ScrollToOptions",
   "Navigator",
 ]
+
+[build-dependencies]
+pulldown-cmark = "0.9.2"
+uuid = { version = "1.3.0", features = ["v4"] }
+
+[dev-dependencies]
+wasm-bindgen-test = "0.3.34"
+
 
 [profile.release]
 lto = true
